--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -256,3 +256,89 @@ footer {
 .profile_comment_text {
 	text-align: justify;
 }
+
+.profile_comment_add {
+	max-width: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+	margin: 20px 0px 40px 0px;
+}
+
+.profile_comment_add_text {
+	max-width: 100%;
+	width: 100%;
+	min-height: 100px;
+	border-radius: 20px;
+	padding: 5px 15px;
+	border: 2px solid #000;
+	font-size: 16px;
+}
+
+.profile_comment_add_title {
+	width: 100%;
+	min-height: 35px;
+	border-radius: 20px;
+	padding: 5px 15px;
+	border: 2px solid #000;
+	font-size: 16px;
+}
+
+.profile_comment_add_btn {
+	border: 2px solid #000;
+	min-height: 35px;
+	border-radius: 20px;
+	padding: 7px 20px;
+	background-color: #fff;
+	color: #000;
+	font-size: 20px;
+	cursor: pointer;
+}
+
+.profile_comment_add_btn:hover {
+	background: #000;
+	color: #fff;
+}
+
+.underline:hover {
+	text-decoration: underline;
+}
+
+/* PEOPLE */
+
+.people_items {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	margin: 20px 0px;
+}
+
+.people_item {
+	display: flex;
+	gap: 20px;
+
+	border: 2px solid black;
+	border-radius: 1000px;
+}
+
+.people_avatar {
+	display: flex;
+	max-width: 150px;
+	max-height: 150px;
+	height: 100%;
+}
+
+.people_avatar > img {
+	max-width: 100%;
+	max-height: 100%;
+	border-radius: 100%;
+	object-fit: cover;
+}
+
+.people_info {
+	margin: 10px 0px 0px 0px;
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+}
