--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -95,7 +95,7 @@ footer {
 
 .sign_btn_block {
 	display: flex;
-	gap: 50px;
+	gap: 20px;
 	font-size: 18px;
 }
 
@@ -206,6 +206,7 @@ footer {
 }
 
 .profile_info_img {
+	display: flex;
 	max-width: 250px;
 	max-height: 250px;
 }
