--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,7 +8,7 @@
 	margin: 0;
 	box-sizing: border-box;
 	text-decoration: none;
-	color: #000;
+	/* color: #000; */
 	font-family: "Adobe Garamond Pro - Regular";
 }
 
@@ -66,6 +66,17 @@ footer {
 }
 
 /* WELCOME */
+
+.welcome_block {
+	width: 100%;
+	margin: 40px auto;
+	max-width: 350px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 40px;
+}
 
 .sign_wrapper {
 	width: 100%;
